--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "next": "14.0.4",
+    "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18"
   },
